[ANZACATT-75] Fix double drop drown arrow on IE (#28)
* [ANZACATT-75] Filter styling issues (includes compiled .css)

* [ANZACATT-75] adding em to line height for input text field

* [ANZACATT-75] fix the grunt-jsbeautifier issue with comment lines

* ANZACATT-75 Fix double drop-down arrow on IE

* ANZACATT-75 Fix double drop-down arrow on IE

--- a/docroot/sites/default/themes/custom/anzacatt/src/sass/page/_form.scss
+++ b/docroot/sites/default/themes/custom/anzacatt/src/sass/page/_form.scss
@@ -323,6 +323,10 @@ form.webform-client-form {
     text-overflow: '';
     padding-left: 5px;
     padding-right: 35px;
+    &::-ms-expand {
+      display: none;
+      /* hide the default arrow in ie10 and ie11 */
+    }
   }
 }
 
